# log-analyzer

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
src/analyzer/: __init__.py  analysis.py  log.py  output.py  parsing.py  statistics.py
tests/integration/: test_main.py
tests/unit/: test_analysis.py  test_output.py  test_parsing.py  test_statistics.py
